<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.richieye.examinationsystem.LoginActivity"
    android:padding="20dp">

    <com.richieye.examinationsystemCustomControl.CustomRoundImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@mipmap/default_head"
        imagecontrol:border_inside_color="#000"
        imagecontrol:border_outside_color="#000"
        imagecontrol:border_thickness="1dp"
        android:id="@+id/ivShowHead" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/login_class"
            android:text="@string/login_classname"
            android:textSize="20dp"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/spClassName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etLoginUserNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/login_no"
            android:inputType="number"
            android:hint="@string/login_user_no"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/ivshowUserNoErr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_error"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/login_user"
            android:hint="@string/login_user_name"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/ivShowUserNameErr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_error"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etLoginUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/login_user"
            android:inputType="textPassword"
            android:hint="@string/login_user_pwd"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/ivShowUserPasswordErr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_error"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_user_local"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/rbNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_user_network"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:checked="true" />
        </RadioGroup>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbxRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_user"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:textSize="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/login_user_reg_msg1"
            android:textSize="18dp" />
        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:onClick="txtRegisterClick"
            android:text="@string/login_user_reg_msg2"
            android:textSize="18dp" />
    </LinearLayout>


</LinearLayout>
